# AI-Texas-Holdem-CSC4444

./: .gitignore  COMPETITION_ANALYSIS.md  COMPETITION_SETUP.md  DESTROYER_README.md  ENSEMBLE_IMPLEMENTATION.md  ENSEMBLE_STRATEGY.md  IMPLEMENTATION_GUIDE.md  README.md  TESTING_GUIDE.md  TONIGHT_TRAINING_INSTRUCTIONS.md  TOURNAMENT_MATH.md  TRAINING_GUIDE.md  WINDOWS_TRAINING_GUIDE.md  agent_defender.py  agent_exploiter.py  agent_gto.py  bot.py  competition_adapter.py  config.json  decision_engine.py  hand_evaluator.py  meta_controller.py  opponent_tracker.py  poker_rl_training.ipynb  pyproject.toml  requirements.txt  setup.py  test_opponent_tracking.py  test_rl_agent.py  test_server.py  train_cfr_7player.py  train_local.py  train_local_6player.py
docs/: LOG_REPLAY.md
historical_logs/: sample_pokerstars.txt  sample_real_hands.jsonl
scripts/: run_bot.py  run_competition.py  run_test_server.py  test_local.sh
tests/: __init__.py  test_server.py
tools/: convert_hh_to_jsonl.py
trained_models/: agent_checkpoint_10000.pt  agent_checkpoint_100000.pt  agent_checkpoint_110000.pt  agent_checkpoint_120000.pt  agent_checkpoint_130000.pt  agent_checkpoint_140000.pt  agent_checkpoint_150000.pt  agent_checkpoint_160000.pt  agent_checkpoint_170000.pt  agent_checkpoint_180000.pt  agent_checkpoint_190000.pt  agent_checkpoint_20000.pt  agent_checkpoint_200000.pt  agent_checkpoint_210000.pt  agent_checkpoint_220000.pt  agent_checkpoint_230000.pt  agent_checkpoint_240000.pt  agent_checkpoint_250000.pt  agent_checkpoint_260000.pt  agent_checkpoint_270000.pt  agent_checkpoint_30000.pt  (+31 more)
(+99 files in other folders)
