[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-bot"
version = "1.0.0"
description = "Advanced AI Texas Hold'em Poker Bot"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "websockets",
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "tqdm",
]
